# SE-2

./: README.md  app.js  data.js  styles.css
backend/: pyproject.toml  test_http.txt  test_out.txt
backend/app/: .env  indic_processor.py  main.py  translator.py
frontend/: README.md  app.js  index.html  styles.css
