[project]
name = "SE_CP-backend"
version = "0.1.0"
description = "Agriculture app"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.5.0",
    "transformers==4.44.2",
    "accelerate>=0.30.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "regex",
    "sacremoses",
    "indic-nlp-library",
]

